Main functionality enabled.

--- a/index.html
+++ b/index.html
@@ -10,62 +10,27 @@
     <h1 class="title">Perform simple calculations on this work of art.</h1>
     <div class="main-div">
       <div class="calc-screen">
-        <h1>SCREEN</h1>
+        <h1 class="calc-screen-h1">0</h1>
       </div>
-      <div class="calc-button btn">
-        <h1>7</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>8</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>9</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>/</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>4</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>5</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>6</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>X</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>1</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>2</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>3</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>-</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>0</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>.</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>+</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>=</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>Clr</h1>
-      </div>
-      <div class="calc-button btn">
-        <h1>del</h1>
-      </div>
+      <button class="calc-button num">7</button>
+      <button class="calc-button num">8</button>
+      <button class="calc-button num">9</button>
+      <button class="calc-button op">/</button>
+      <button class="calc-button num">4</button>
+      <button class="calc-button num">5</button>
+      <button class="calc-button num">6</button>
+      <button class="calc-button op">X</button>
+      <button class="calc-button num">1</button>
+      <button class="calc-button num">2</button>
+      <button class="calc-button num">3</button>
+      <button class="calc-button op">-</button>
+      <button class="calc-button num">0</button>
+      <button class="calc-button num">.</button>
+      <button class="calc-button op">+</button>
+      <button class="calc-button equals">=</button>
+      <button class="calc-button clr">Clr</button>
+      <button class="calc-button del">del</button>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
